# concordia_anthropoloy

./: .gitignore  Makefile  README.md  notes.md  pyproject.toml  pyrightconfig.json  pyrightcongif.json
src/concordia_anthropology/: __init__.py  main.py
src/concordia_anthropology/agents/: voting_game_master.py
src/concordia_anthropology/utils/: agent_string_parsing.py
tests/: test_main.py
